--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>Тестовый сайтик</head>
 <meta>
 <body>
-  <header></header>
-  <main></main>
-  <footer></footer>  
+  <header class="header"></header>
+  <main class="main"></main>
+  <footer class="footer"></footer>  
 </body>
